Add barebones course details

--- a/views/course.ejs
+++ b/views/course.ejs
@@ -3,6 +3,6 @@
     <body>
         <%- include('./partials/nav.ejs') %>
         <h1>CloudCanvas</h1>
-        <h4>course.course_name</h4>
+        <h4><%= course_name %></h4>
     </body>
 </html>
