--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,5 +2,5 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, intiial-scale=1.0">
     <title>CloudCanvas</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
