--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,14 +13,9 @@ body {
 
 nav {
     grid-column-start: 1;
-    grid-row: 1 / -1;
+    grid-row: 2 / -1;
     padding: 24px 8px;
-    background-color: #EAE5AB;
     border-right: 0.5px solid black;
-}
-
-h1 {
-    font-family: "Nunito Sans", sans-serif;
 }
 
 a, a:visited {
@@ -38,25 +33,56 @@ a, a:visited {
     padding: 4px 16px;
 }
 
-.heading {
-    grid-column: 2 / -1;
+.top-bar {
+    grid-column: 1 / -1;
     grid-row-start: 1;
     align-self: center;
-    margin: 0 24px;
+    border-bottom: 0.5px solid black;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    height: 100%;
+}
+
+.heading {
+    display: inline-block;
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 700;
+    font-size: x-large;
+    margin: 0;
+}
+
+.label-medium {
+    font-family: sans-serif;
+    font-weight: normal;
+    font-size: 1.5rem;
+    width: fit-content;
+}
+
+.label-small {
+    font-family: sans-serif;
+    font-weight: normal;
+    font-size: 1rem;
+    width: fit-content;
 }
 
 .documents-list {
     grid-column: 2 / -1;
+    padding: 24px;
+}
+
+.document {
+    max-width: 124px;
+    min-width: 124px;
+    max-height: 160px;
+    min-height: 160px;
+}
+
+.flex-row {
     display: flex;
     flex-direction: row;
     gap: 60px;
     align-content: flex-start;
     flex-wrap: wrap;
-}
-
-.document {
-    max-width: 160px;
-    min-width: 160px;
-    max-height: 160px;
-    min-height: 160px;
 }
