--- a/views/course.ejs
+++ b/views/course.ejs
@@ -11,18 +11,18 @@
                 <p class="label-small">Settings</p>
             </a>
         </nav>
-        <h4><%= course_name %></h4>
-        <ul class="documents-list">
+        <div class="top-bar">
+            <p class="heading">Folders: <%= course_name %></p>
+        </div>
+        <section class="documents-list">
             <% for (let i = 0; i < folders.length; i++) { %>
-                <li>
-                    <div class="couse-file">
-                        <a href=<%= 'folder/' + folders[i]._id %>>
-                            <img src="/images/file-orange.png">
-                            <p class="label-medium"><%= folders[i].folder_name %></p>
-                        </a>
-                    </div>
-                </li>
+                <div class="document">
+                    <a href=<%= 'folder/' + folders[i]._id %>>
+                        <img src="/images/file-orange.png">
+                        <p class="label-small center"><%= folders[i].folder_name %></p>
+                    </a>
+                </div>
             <% } %>
-        </ul>
+        </section>
     </body>
 </html>
